# MultiheadSequencer

./: CMakeLists.txt  plugin.json
src/: MultiheadSequencer.cpp  plugin.cpp  plugin.hpp
